[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["goraya2005 <goraya2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.2.36"
langchain-community = "^0.2.14"
python-dotenv = "^1.0.1"
langchain-google-genai = "^1.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
